; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_device.c_ib_get_device_fw_str.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_device.c_ib_get_device_fw_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.ib_device.0*, i8*)* }
%struct.ib_device.0 = type opaque

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ib_get_device_fw_str(%struct.ib_device* %0, i8* %1) #0 {
  %3 = alloca %struct.ib_device*, align 8
  %4 = alloca i8*, align 8
  store %struct.ib_device* %0, %struct.ib_device** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.ib_device*, %struct.ib_device** %3, align 8
  %6 = getelementptr inbounds %struct.ib_device, %struct.ib_device* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32 (%struct.ib_device.0*, i8*)*, i32 (%struct.ib_device.0*, i8*)** %7, align 8
  %9 = icmp ne i32 (%struct.ib_device.0*, i8*)* %8, null
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load %struct.ib_device*, %struct.ib_device** %3, align 8
  %12 = getelementptr inbounds %struct.ib_device, %struct.ib_device* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.ib_device.0*, i8*)*, i32 (%struct.ib_device.0*, i8*)** %13, align 8
  %15 = load %struct.ib_device*, %struct.ib_device** %3, align 8
  %16 = bitcast %struct.ib_device* %15 to %struct.ib_device.0*
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 %14(%struct.ib_device.0* %16, i8* %17)
  br label %22

19:                                               ; preds = %2
  %20 = load i8*, i8** %4, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 0
  store i8 0, i8* %21, align 1
  br label %22

22:                                               ; preds = %19, %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
